# FangRunner

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  player.hpp  utility.hpp  world.hpp
